jsRef with TextBox
+ user input text at point with background

- dynamic canvas background (causes tiling)

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
 	
-	<canvas id="my-canvas" width="1000px" height="500px" />
+	<canvas id="my-canvas" width="1000px" height="500px" style="background-image:url('./img/r850r.jpg')"/>
 	
 	<script src="javascriptRef.js"></script>
 </body>
