--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
 
 <body>
 	
-	<div id="svg-1">
-	<img src='./img/r850r.jpg'/>
+	<div class="img-overlay-wrap">
+
+	  <img src="./img/r850r.jpg">
+	  <svg id="svg1" x="0" y="0" width="100%" height="100%">
+	  </svg>
+
 	</div>
-	
+		
+	<!-- <svg id="svg1" x="0" y="0" height="500" width="500" style="background: gray"></svg> -->
 	<!-- <canvas id="my-canvas" width="1275px" height="475" style="background-image:url('./img/r850r.jpg')"/> -->
 	
 	<script src="javascriptRef.js"></script>
