--- a/resources/html/new-defini.html
+++ b/resources/html/new-defini.html
@@ -2,20 +2,23 @@
 <html>
   <head/>
   <body>
+    New word+definition create
     <br>
     Message: {{sys-msg}}
     <form action="?add">
-      <select name="language">
-        {{#all-language}}
-        <option value="{{did}}">{{myword}}</option>
-        {{/all-language}}
-      </select>
-      <br>
-      Word: <input type="text" name="word">
-      <br>
-      Defini: <input type="text" name="definition">
-      <br>
-      <input type="submit" name="Submit">
+      <table>
+        <tr>
+          <td>Choose the language of this word </td><td><select name="language">
+              {{#all-language}}
+              <option value="{{did}}">{{myword}}</option>
+              {{/all-language}}
+            </select>
+          </td>
+        </tr>
+        <tr><td align="right">Word</td><td><input type="text" name="word"></td></tr>
+        <tr><td align="right">Defini</td><td><input type="text" name="definition"></td></tr>
+        <tr><td>&nbsp;</td><td><input type="submit" name="Submit" value="Save word/defini"></td></tr>
+      </table>
     </form>
   </body>
 </html>
