Added new action for listing word/defs, still needs SQL.

--- a/resources/html/new-defini.html
+++ b/resources/html/new-defini.html
@@ -5,7 +5,9 @@
     New word+definition create
     <br>
     Message: {{sys-msg}}
-    <form action="app?action=savedefini">
+    <a href="app?action=list&id=1">List all word-defs 10 at a time</a>
+    <br>
+    <form action="app">
       <input type="hidden" name="action" value="savedefini"/>
       <input type="hidden" name="id" value="{{id}}"/>
       <table>
