Checkpoint. Insert, update, list working. Need several small fixes.

--- a/resources/html/list.html
+++ b/resources/html/list.html
@@ -8,7 +8,7 @@
       <table>
         <tr><td align="right">Lang</td><td align="right">Word</td><td>Definition</td></tr>
         {{#word-def-list}}
-        <tr><td align="right">{{lang-text}}</td><td align="right">{{myword}}</td><td>{{phrase}}</td></tr>
+        <tr><td align="right">{{id}}</td><td align="right">{{myword}}</td><td>{{phrase}}</td></tr>
         {{/word-def-list}}
       </table>
     <form action="app">
