Working confirm edit-update.

--- a/resources/html/list.html
+++ b/resources/html/list.html
@@ -15,7 +15,7 @@
         {{#word-def-list}}
         <tr>
           <td>{{id}}</td>
-          <td align="right">{{lang_name}}</td>
+          <td align="right">{{langname}}</td>
           <td align="right"><a href="app?action=edit&id={{id}}&lang={{lang}}">{{myword}}</a></td>
           <td>{{phrase}}</td>
         </tr>
