--- a/resources/html/list.html
+++ b/resources/html/list.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <head/>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  </head>
   <body>
     New word+definition create
     <br>
