--- a/resources/html/new-defini.html
+++ b/resources/html/new-defini.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <head/>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  </head>
   <body>
     New word+definition create
     <br>
@@ -8,7 +10,7 @@
     <br>
     <a href="app?action=list&id=1">List all word-defs 10 at a time</a>
     <br>
-    <form action="app">
+    <form action="app" accept-charset="UTF-8">
       <input type="hidden" name="action" value="savedefini"/>
       <input type="hidden" name="id" value="{{id}}"/>
       <table>
@@ -20,8 +22,8 @@
             </select>
           </td>
         </tr>
-        <tr><td align="right">Word</td><td><input type="text" name="myword" value="{{myword}}"></td></tr>
-        <tr><td align="right">Defini</td><td><input type="text" name="phrase" value="{{phrase}}"></td></tr>
+        <tr><td align="right">Word</td><td><input type="text" name="myword" value="{{myword}}" size="40"></td></tr>
+        <tr><td align="right">Defini</td><td><textarea name="phrase" rows="5" cols="60">{{phrase}}</textarea></td></tr>
         <tr><td>&nbsp;</td><td><input type="submit" name="Submit" value="Save word/defini"></td></tr>
       </table>
     </form>
