--- a/resources/html/overwrite-ok.html
+++ b/resources/html/overwrite-ok.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <head/>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  </head>
   <body>
     You are about to overwrite an existing id+lang entry.
     <br>
@@ -8,7 +10,7 @@
     <br>
     <table>
       <tr><td>
-    <form action="app?action=overwrite-ok">
+    <form action="app?action=overwrite-ok"  accept-charset="UTF-8">
       <input type="hidden" name="id" value="{{id}}"/>
       <input type="hidden" name="lang" value="{{lang}}"/>
       <input type="hidden" name="myword" value="{{myword}}"/>
