Fix type conversion of :id param, and params in general.

--- a/resources/html/new-defini.html
+++ b/resources/html/new-defini.html
@@ -4,8 +4,10 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   </head>
   <body>
-    New word+definition create
-    <br>
+    Create/edit word+definition.
+    <br/>
+    <a href="app?action=edit">New word+definition</a>
+    <br/>
     Message: {{sys-msg}}
     <br>
     <a href="app?action=list&id=1">List all word-defs 10 at a time</a>
