--- a/resources/html/list.html
+++ b/resources/html/list.html
@@ -4,8 +4,11 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   </head>
   <body>
-    New word+definition create
+    List words+definitions
     <br>
+    <br/>
+    <a href="app?action=edit">New word+definition</a>
+    <br/>
     Message: {{sys-msg}}
       <table>
         <tr>
